--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -149,18 +149,106 @@ html {
   background-color: var(--SitePrimaryColor);
   color: black;
   @include alignCenter;
-  flex-direction: column;
 
-  h1 {
-    font-size: 2rem;
-  }
-
-  .stripeButtons {
+  .PaymentSection {
     position: relative;
-    width: 40%;
-    height: 400px;
+    border: 2px solid var(--SiteSecondaryColor);
+    border-radius: 10px;
+    height: 70%;
+    width: #{"min(400px,95%)"};
     @include alignCenter;
     flex-direction: column;
-    justify-content: space-around;
+    box-shadow: 10px 10px 20px rgb(103, 102, 102);
+    overflow: hidden;
+
+    .header {
+      width: 100%;
+      height: 15%;
+      @include alignCenter;
+      flex-direction: row;
+      justify-content: space-evenly;
+      background-color: black;
+
+      h1 {
+        height: 100%;
+        font-size: 1.5rem;
+        @include alignCenter;
+        font-weight: bolder;
+        color: white;
+      }
+
+      img {
+        width: 70px;
+        height: auto;
+      }
+    }
+
+    hr {
+      border: 0;
+      clear: both;
+      display: block;
+      width: 85%;
+      background-color: var(--SiteTertiaryColor);
+      height: 1px;
+    }
+
+    .stripeButtons {
+      position: relative;
+      width: 100%;
+      height: 85%;
+      @include alignCenter;
+      flex-direction: column;
+      justify-content: space-evenly;
+      list-style: none;
+
+      h2 {
+        font-size: 1.3rem;
+        padding: 0px 10%;
+        text-align: center;
+      }
+
+      li {
+        position: relative;
+        height: 15%;
+        width: 85%;
+        border: 2px solid var(--SiteTertiaryColor);
+        border-radius: 10px;
+        @include alignCenter;
+        flex-direction: row;
+        justify-content: space-around;
+        cursor: pointer;
+
+        input,
+        label {
+          pointer-events: none;
+          font-size: 1.1rem;
+        }
+
+        input,
+        label,
+        Button {
+          position: relative;
+        }
+
+        input {
+          width: 15px;
+          height: 15px;
+        }
+
+        svg {
+          height: 70%;
+          width: auto;
+        }
+
+        &:hover {
+          background-color: #43a3df6b;
+        }
+      }
+
+      Button {
+        height: 15%;
+        width: 85%;
+      }
+    }
   }
 }
