--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -145,7 +145,7 @@ html {
   z-index: 1;
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: var(--SitePrimaryColor);
   color: black;
   @include alignCenter;
@@ -153,6 +153,7 @@ html {
   .PaymentSection {
     position: relative;
     border: 2px solid var(--SiteSecondaryColor);
+    background: var(--SitePrimaryColor);
     border-radius: 10px;
     height: 70%;
     width: #{"min(400px,95%)"};
@@ -217,6 +218,7 @@ html {
         flex-direction: row;
         justify-content: space-around;
         cursor: pointer;
+        transition: background-color 500ms;
 
         input,
         label {
@@ -242,6 +244,7 @@ html {
 
         &:hover {
           background-color: #43a3df6b;
+          transition: background-color 500ms;
         }
       }
 
@@ -252,3 +255,47 @@ html {
     }
   }
 }
+
+.CanceledPage,
+.SuccessPage {
+  @include alignCenter;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+
+  div {
+    width: #{"min(600px,95%)"};
+    position: relative;
+  }
+
+  .canceledHeader {
+    @include alignCenter;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 40%;
+
+    > * {
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+    }
+
+    p {
+      font-size: 1.5rem;
+    }
+  }
+
+  .lottieContainer {
+    height: 60%;
+    @include alignCenter;
+  }
+}
+
+// .HomePage,
+// .CanceledPage,
+// .SuccessPage {
+// background:
+// linear-gradient(45deg, black, white, black);
+// }
